Enforce release 21 and fix new API code
Signed-off-by: Chen Dai <daichen@amazon.com>